--- a/.github/workflows/stage-ci.yml
+++ b/.github/workflows/stage-ci.yml
@@ -6,6 +6,15 @@ on:
     branches: [stage]
 
 jobs:
+  unit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout/@v4
+      - uses: actions/setup-dotnet@v4
+        with: { dotnet-version: '8.0.x'}
+      - run: dotnet restore
+      - run: dotnet build --configuration Release --no-restore -warnaserror
+      - run: dotnet test ./TacomaTrivia.UnitTests --no-build -v minimal --collect:"XPlat Code Coverage"
   build-and-test:
     runs-on: [self-hosted,Windows, Stage]
     steps:
