Lowercase issue with TT leading to error in pipeline

--- a/TacomaTrivia.UnitTests/TacomaTrivia.UnitTests.csproj
+++ b/TacomaTrivia.UnitTests/TacomaTrivia.UnitTests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\tacomatrivia.Domain\tacomatrivia.Domain.csproj" />
+    <ProjectReference Include="..\TacomaTrivia.Domain\TacomaTrivia.Domain.csproj" />
     <ProjectReference Include="..\TacomaTrivia.Application\TacomaTrivia.Application.csproj" />
   </ItemGroup>
 
