--- a/.github/workflows/stage-ci.yml
+++ b/.github/workflows/stage-ci.yml
@@ -67,7 +67,7 @@ jobs:
         working-directory: ./tacomatrivia-frontend 
         run: |
           
-          npm ci
+          npm start
           npm run build -- --outDir ../TacomaTrivia.Api\wwwroot
 
       # ----- Backend publish -----
