changes to make sure the files publich and wwwroot were created

--- a/.github/workflows/stage-ci.yml
+++ b/.github/workflows/stage-ci.yml
@@ -133,4 +133,6 @@ jobs:
       - name: Verify container
         run: |
           docker ps --filter "name=tacomatrivia-stage"
-    
+
+#Deleted old container that had this app
+# stopped tacoma pg db container
