--- a/.github/workflows/stage-ci.yml
+++ b/.github/workflows/stage-ci.yml
@@ -54,8 +54,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          clean: true
-          path: src
+          clean: false
+          
      
       # ----- Frontend build -----
       # Installs Node on the Windows box for building the SPA
