--- a/.github/workflows/stage-ci.yml
+++ b/.github/workflows/stage-ci.yml
@@ -142,3 +142,6 @@ jobs:
 
 # all of that may have been for naught as I had the folder open using
 #vs code on that machine
+
+#Nope turns out the issue might have been a rogue terminal pointing to
+#that folder and causing the hangup
