--- a/.github/workflows/stage-ci.yml
+++ b/.github/workflows/stage-ci.yml
@@ -69,9 +69,10 @@ jobs:
       - name: Build frontend into API wwwroot
         working-directory: ./tacomatrivia-frontend 
         run: |
+          set "API_WWWROOT=../TacomaTrivia.Api/wwwroot"
           IF NOT EXIST ../TacomaTrivia_Onion/TacomaTrivia.Api/wwwroot\ (
             echo Creating ../TacomaTrivia_Onion/TacomaTrivia.Api/wwwroot
-            mkdir ../TacomaTrivia_Onion/TacomaTrivia.Api/wwwroot
+            mkdir "%API_WWWROOT%"
           )
           npm ci
           npm run build -- --outDir ../TacomaTrivia_Onion/TacomaTrivia.Api/wwwroot
